<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Oinc</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="back">Voltar</string>
    <string name="next">Avançar</string>
    <string name="confirm">Confirmar</string>
    <string name="save">Salvar</string>
    <string name="cancel">Cancelar</string>

    <string name="yes">SIM</string>
    <string name="no">Não</string>
    <string name="won">Lucrei</string>
    <string name="spend">Gastei</string>
    <string name="required_field">Campo Obrigatório</string>
    <string name="invalid_value">Valor inválido</string>
    
    <string name="financial_transactions">
        "Houve movimentação financeira?"
    </string>
    <string name="loading">Carregando...</string>
    <string name="loading_cartoon">Aplicando filtro...</string>
    <string name="dialog_delete_image_message">A foto será deletada da aplicação.</string>
    <string name="dialog_delete_image_title">Remover foto?</string>

    <!-- Form novo objetivo -->
    <string name="hint_new_goal_name">Objetivo</string>
    <string name="new_goal_value_title">E o valor?</string>
    <string name="hint_new_goal_value">R$50,00</string>
    <string name="new_goal_title">Qual seu objetivo?</string>

    <string name="facebook_app_id">1554550108164243</string>

    <!-- Form registro -->
    <string name="hint_new_register_email">usuario@email.com</string>
    <string name="hint_new_register_name">Seu nome</string>
    <string name="register_label">Novo usuário?</string>
    <string name="register_button">Entrar</string>
    <string name="title_activity_show_trips">ShowTripsActivity</string>


</resources>
