<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical">
    <RelativeLayout
        android:id="@+id/layout_objective"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:id="@+id/goalNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="12dp"
            android:paddingTop="12dp"
            android:text="@string/new_goal_title"
            android:textAlignment="center"
            android:textSize="18dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/orange"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"/>
        <ImageView
            android:id="@+id/choosePictureImageView"
            android:layout_width="@dimen/picture_form_width"
            android:layout_height="@dimen/picture_form_height"
            android:src="@drawable/objective"
            android:background="@color/orange"
            android:layout_below="@+id/goalNameTextView"
            android:clickable="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/activity_vertical_margin"/>
        <EditText
            android:id="@+id/goalNameEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_new_goal_name"
            style="@style/editText_default_style"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:maxLength="28"
            android:layout_below="@+id/choosePictureImageView"
            android:layout_centerHorizontal="true"
            android:layout_alignLeft="@+id/choosePictureImageView"
            android:layout_alignRight="@+id/choosePictureImageView"
            android:inputType="textCapSentences"/>
        <TextView
            android:id="@+id/goalValueTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="12dp"
            android:paddingTop="12dp"
            android:text="@string/new_goal_value_title"
            android:textAlignment="center"
            android:textSize="18dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/orange"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/goalNameEditText"/>
        <EditText
            android:id="@+id/goalValueEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_below="@+id/goalValueTextView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="3dp"
            android:layout_alignLeft="@+id/choosePictureImageView"
            android:layout_alignRight="@+id/choosePictureImageView"
            android:inputType="numberDecimal"
            style="@style/value_style"/>
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/layout_footer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">
        <Button
            android:id="@+id/backGalleryItemButton"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/cancel"
            style="@style/btn_default_style"
            android:layout_weight="1"
            android:layout_marginRight="@dimen/abc_dropdownitem_text_padding_right"
            android:clickable="true"/>
        <Button
            android:id="@+id/saveNewGoalButton"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/save"
            style="@style/btn_default_style"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/abc_dropdownitem_text_padding_left"
            android:clickable="true"/>
    </LinearLayout>
</RelativeLayout>

